--- a/Maket/Maket/Properties/Resources.resx
+++ b/Maket/Maket/Properties/Resources.resx
@@ -121,10 +121,16 @@
   <data name="dcd1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dcd1.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="grt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\grt.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dcd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dcd.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="grt" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\grt.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Без имени" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Без имени.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="foto2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\foto2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
